[gd_scene load_steps=11 format=3 uid="uid://74vapyldojnb"]

[ext_resource type="Script" uid="uid://b7118k8q2a3u8" path="res://miscelleaneous/small_weapon_capsule.gd" id="1_7mtue"]
[ext_resource type="Shader" uid="uid://cwo5gfjm6p3g6" path="res://assets/characters/player/megaman/megamanshader.gdshader" id="2_jo41o"]
[ext_resource type="Texture2D" uid="uid://dpmuyh7jtx1uj" path="res://assets/miscellaneous/items/items_miscellaneous_MMF(16x16).png" id="3_n04uj"]
[ext_resource type="AudioStream" uid="uid://cmnoml1j6l3be" path="res://assets/sounds/health_up.wav" id="4_rvnop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1nws1"]
shader = ExtResource("2_jo41o")
shader_parameter/bodyoutline = Color(0, 0, 0, 1)
shader_parameter/bodyoutlcharge = Color(0.568627, 0, 0, 1)
shader_parameter/bodycolorI = Color(0, 0.90625, 0.84375, 1)
shader_parameter/chargecolorI = Color(0, 0.780392, 0, 1)
shader_parameter/bodycolorII = Color(0, 0.4375, 0.921875, 1)
shader_parameter/chargecolorII = Color(0, 0, 0.552941, 1)
shader_parameter/color_similarity_threshold = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_1mfof"]
atlas = ExtResource("3_n04uj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxvka"]
atlas = ExtResource("3_n04uj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_15dax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mfof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxvka")
}],
"loop": true,
"name": &"small_weapon_capsule",
"speed": 5.0
}]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_ym5t8"]
length = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocdg7"]
size = Vector2(8, 8)

[node name="small_weapon_capsule" type="RigidBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource("1_7mtue")

[node name="anima" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1nws1")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_15dax")
animation = &"small_weapon_capsule"
frame_progress = 0.370355

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("SeparationRayShape2D_ym5t8")

[node name="detect_player" type="Area2D" parent="." groups=["weapon_capsule"]]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_player"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_ocdg7")

[node name="healthup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rvnop")

[connection signal="body_entered" from="detect_player" to="." method="_on_detect_player_body_entered"]
[connection signal="finished" from="healthup" to="." method="_on_healthup_finished"]
